# vehicle_classifier

./: .gitignore  main.py  pyproject.toml
vehicle_classifier/: README.md  _classes.csv  app.py  requirements.txt  train.py
vehicle_classifier/models/: model_meta.json
vehicle_classifier/static/css/: style.css
vehicle_classifier/static/js/: app.js
vehicle_classifier/templates/: index.html
